syntax = "proto3";

package auth;

option go_package = "./pb/auth";

service AuthService{
    rpc Login(UserLoginReq) returns (UserLoginRes) {};
    rpc Signup(UserSignupReq) returns (UserSignupRes) {};
    rpc Verify(VerifyReq) returns (VerifyRes) {};
    rpc ForgotPassword(FPreq) returns (FPres) {};
    rpc ResetPassword(RPreq) returns (RPres) {};
    rpc AddProfileDescription(APDReq) returns (APDRes) {};
    rpc UpdateProfileDescription (UPDReq) returns (UPDRes) {};
    rpc AddEducation(AddEducationReq) returns (AddEducationRes) {};
    rpc UpdateEducation(UpdateEducationReq) returns (UpdateEducationRes) {};
    rpc DeleteEducation(DeleteEducationReq) returns (DeleteEducationRes) {};
    rpc GetProfile(GetProfileReq) returns (GetProfileRes) {};
    rpc EditSkill(EditSkillReq) returns (EditSkillRes) {};
    rpc AddExperience(ExpReq) returns (ExpRes) {};
    rpc UpdateExperience(ExpReq) returns (ExpRes) {};
    rpc DeleteExperience(DltExpReq) returns (DltExpRes) {};
    rpc GetProfileClient(ClientProfileReq) returns(ClientProfileRes) {};
    rpc BlockUser(BlockReq) returns (BlockRes) {};
    rpc UnBlockUser(BlockReq) returns (BlockRes) {};
    rpc AddSkill(AddSkillReq) returns (AddSkillRes) {};
    rpc UpdateProfilePhoto(PhotoReq) returns (PhotoRes) {};
    rpc OnboardFreelancerToPaypal(OnboardToPaypalReq) returns (OnboardToPaypalRes) {};
    rpc ReviewFreelancer(ReviewFlancerReq) returns (ReviewFlancerRes) {};
}

message ReviewFlancerReq{
    string Review = 1;
    int32 Rating = 2;
    int32 Freelancer_id = 3;
    int64 Client_id = 4;
}

message ReviewFlancerRes{
    int64 status = 1;
    string Error = 2;
    string Response = 3;
}


message OnboardToPaypalReq{
    string user_id = 1;
}

message OnboardToPaypalRes{
    string OnboardURL = 1;
    string Error = 2;
    int32 status = 3;
}

message PhotoReq{
    string user_id = 1;
    bytes image = 2;
}

message PhotoRes{
    int64 status = 1;
    string error = 2;
    string response = 3;
}

message UserLoginReq{
    string email = 1;
    string password = 2;
}

message UserLoginRes{
    int64 status = 1;
    string error = 2;
    string message = 3;
    string token = 4;
}

message UserSignupReq{
    string firstname = 1;
    string lastname = 2; 
    string phone = 3;
    string email = 4;
    string password = 5;
    string country = 6;
    string role =7;
}

message User{
    string firstname = 1;
    string lastname = 2; 
    string phone = 3;
    string email = 4;
    string country = 5;
}

message UserSignupRes{
    int64 status = 1;
    string error = 2;
    string message = 3;
    string token = 4;
}

message VerifyReq{
    int64 OTP = 1;
    string token = 2;
}

message VerifyRes{
    int64 status = 1;
    string error = 2;
    string message = 3;
}

message FPreq{
    string email = 1;
}

message FPres{
    int64 status = 1;
    string error = 2;
    string response =3; 
}

message RPreq{
    int64 OTP = 1;
    string password = 2; 
    string Token = 3;
}

message RPres{
    int32 status = 1;
    string error = 2;
    string response = 3; 
}
message profile{
    string Title = 1;
    string Description = 2;
    int64 Hourly_rate = 3;
}

message APDReq{
    string Title = 1;
    string Description = 2;
    int64 Hourly_rate = 3;
    string user_id = 4;
}

message APDRes{
    int64 status = 1;
    string error = 2;
    string message =3; 
    profile Profile = 4;
}

message UPDReq{
    string Title = 1;
    string Description = 2;
    int64 Hourly_rate = 3;
    string user_id = 4;
}

message UPDRes{
    int64 status = 1;
    string error = 2;
    string message =3; 
    profile Profile = 4;
}

message AddEducationReq{
    string school =1;
    string user_id = 2;
    string course = 3;
    string Date_Started = 4;
    string Date_Ended = 5;
    string Description = 6;
    string Area_of_study = 7;
}

message AddEducationRes{
    int64 Status = 1;
    string message = 2;
    string Error = 3;
    Education body = 4;
}

message Education {
    int64 Education_id = 1;
    string school =2;
    string course = 3;
    string Date_Started = 4;
    string Date_Ended = 5;
    string Description = 6;
    string Area_of_study = 7;
}

message UpdateEducationReq{
    string school =1;
    string user_id = 2;
    string course = 3;
    string Date_Started = 4;
    string Date_Ended = 5;
    string Description = 6;
    string Area_of_study = 7;
    string EducationId = 8;
}

message UpdateEducationRes{
    int64 Status = 1;
    string message = 2;
    string Error = 3;
    Education body = 4;
}

message DeleteEducationReq{
    string user_id = 1;
    string education_id = 2; 
}

message DeleteEducationRes{
    int64 Status = 1;
    string message = 2;
    string Error = 3;
}

message EditSkillReq{
    repeated int64 skills = 1;
    string user_id = 2;
}

message EditSkillRes{
    int64 Status = 1;
    string message = 2;
    string Error = 3;
}

message GetProfileReq{
   string user_id = 1;
}

message GetProfileRes{
    User user = 1;
    UPDReq Description = 2;
    repeated Education education = 3;
    repeated ExpReq experience = 4;
    string Error = 5;
    int64 Status = 6;
    // repeated Experience experience = 3;
}

message ExpReq{
    string Company =1;
    string Country = 2;
    string City = 3;
    string Title = 4;
    string FromDate =5;
    string ToDate = 6;
    string Description = 7;
    string user_id = 8;
    string exp_id = 9;

}

message ExpRes{
    string Response = 1;
    int64 Status = 2;
    string Error = 3;
}

message DltExpReq{
    string user_id =1;
    string experience_id = 2;
}

message DltExpRes{
    string Response = 1;
    int64 Status = 2;
    string Error = 3;
}

message ClientProfileReq{

}

message ClientProfileRes{

}

message BlockReq{
    string user_id = 1;
}

message BlockRes{
    int64 status = 1;
    string Error = 2;
    string Response = 3;
}

message AddSkillReq{
    string skill = 1;
    string description = 2;
}

message AddSkillRes{
    int64 status = 1;
    string Error = 2;
    string Response = 3;
}